# Automating-GOA

./: .claude_settings.json  .coveragerc  .env.example  .gitignore  Commercial Invoice.docx  Input Info.xlsm  README.md  SortStar_placeholders.txt  app.py  app.py.backup_refactor_chat_fix  app_backup.py  app_current_backup.py  check_db.py  check_few_shot.py  check_gemini_model.py  check_machines.py  check_placeholders.py  clean_app.py  client_profile_plan.md  count_enhanced_placeholders.py  crm_utils.py  diagnose_db.py  doc_filler.py  document_generators.py  fix_database.py  fix_duplicate_machine.py  full_fields_outline.md  initialize_db.py  integration_plan.md  main.py  mapping.py  output_Monoblock_Model__Synergy_Patriot_FPCL_GOA.html  pdf_utils.py  placeholders_context.txt  profile_workflow.py.backup_refactor_chat_fix  pyproject.toml  pytest.ini  requirements.txt  selected_items.txt  setup.py  (+12 more)
.claude/: settings.local.json
.claude/agents/: quoteflow-modifier.md
cleanup/database/: initialize_db.py
cleanup/tests/: test_context_enhancement_simplified.py  test_db.py  test_optimization.py  test_projected_speed.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
config/: mapping_mailmerge.txt  requirements.txt
docs/: CLAUDE.md  FIX_SUMMARY.md  Few_Shot_Learning_Implementation.md  Few_Shot_Monitoring_Validation.md  README.md  Refactoring Plan.md  TESTING_GUIDE.md  TESTING_INFRASTRUCTURE.md
oldfiles/: app.py.backup  app_dev.py  app_enhanced_with_errors.py  profile_workflow.py.backup_refactor_chat_fix  ui_pages.py
prompts/: state_aware_prompt.md
scripts_to_archive/: analyze_missing_enhancements.py  analyze_missing_sections.py  check_templates.py  fix_duplicates.py  fix_machines.py  fix_template_ui.py  fix_templates.py  test_app_integration.py  test_context_enhancement.py  test_db.py
src/: __init__.py
src/generators/: __init__.py  document_generators.py
src/llm/: __init__.py  client.py  confidence.py  constants.py  extraction.py  post_processing.py  qa.py  validation.py
src/ui/: __init__.py  simple_field_editor.py  template_preview_editor.py  ui_pages.py
src/utils/: __init__.py  crm_utils.py  doc_filler.py  few_shot_enhanced.py  few_shot_learning.py  form_generator.py  html_doc_filler.py  llm_handler.py  pdf_utils.py  schemas.py  (+2 more)
templates/: CERTIFICATION OF ORIGIN_NAFTA.docx  GOA_Sortstar_Temp.docx  GOA_filling_guide.md  GOA_template.xlsx  Packing Slip.docx  build_form_html.py  generate_template.py  goa_form.html  template.docx  ~$mplate.docx
tests/: Labelling Machine Model “MonoStar P.txt  conftest.py  dummy_template_no_placeholders.docx  test_doc_filler.py  test_form_generator.py  test_helpers.py  test_pdf_utils.py  test_template_utils.py
(+69 files in other folders)
